--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
+    "redis": "^4.7.0",
     "socket.io": "^4.7.4",
     "validator": "^13.11.0"
   },
